force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/Allow_Down_Voting__c.field-meta.xml
<CustomField>
    <fullName>Allow_Down_Voting__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow users to downvote an idea</description>
    <inlineHelpText>Check to enable users to down vote an idea.</inlineHelpText>
    <label>Allow Down Voting</label>
    <type>Checkbox</type>
</CustomField>