force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/Auto_subscribe_Idea_Creators__c.field-meta.xml
<CustomField>
    <fullName>Auto_subscribe_Idea_Creators__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field to auto-subscribe creators to Ideas they have submitted</inlineHelpText>
    <label>Auto-subscribe Idea Creators</label>
    <type>Checkbox</type>
</CustomField>