force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/Auto_subscribe_Idea_Requestors__c.field-meta.xml
<CustomField>
    <fullName>Auto_subscribe_Idea_Requestors__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field to auto-subscribe requestors to Ideas submitted on their behalf.</inlineHelpText>
    <label>Auto-subscribe Idea Requestors</label>
    <type>Checkbox</type>
</CustomField>