force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable debug mode for detailed console info</description>
    <inlineHelpText>Enable debug mode for detailed console info</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>