force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/Disable_Read_Only_Users__c.field-meta.xml
<CustomField>
    <fullName>Disable_Read_Only_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable read only profile users from following, voting and commenting on Ideas</inlineHelpText>
    <label>Restrict Read Only Users</label>
    <type>Checkbox</type>
</CustomField>