force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/Enable_Idea_Extension_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Enable_Idea_Extension_Functionality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Idea Extension Functionality</label>
    <type>Checkbox</type>
</CustomField>