force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/Ignore_Vote_Limit_Field__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Vote_Limit_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this to ignore account voting limits</description>
    <inlineHelpText>If checked, disables account voting restrictions globally.  If unchecked, account-level settings will be used where defined.</inlineHelpText>
    <label>Ignore Vote Limit Field</label>
    <type>Checkbox</type>
</CustomField>