force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/LEX_Nickname_Display__c.field-meta.xml
<CustomField>
    <fullName>LEX_Nickname_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to display user nicknames in LEX mode.</inlineHelpText>
    <label>LEX Nickname Display</label>
    <type>Checkbox</type>
</CustomField>