force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/Vote_Show_Alternate_Message__c.field-meta.xml
<CustomField>
    <fullName>Vote_Show_Alternate_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to display the alternate Idea voted message for a user who has already voted (custom label)</inlineHelpText>
    <label>Show Alternate Voted Message</label>
    <type>Checkbox</type>
</CustomField>