force-app/main/default/objects/X7S_Ideas_Setting__mdt/fields/X7S_Ideas_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>X7S_Ideas_Field_Set__c</fullName>
    <inlineHelpText>Select a set of custom field on the Idea object</inlineHelpText>
    <label>7S Idea Field Set</label>
    <referenceTo>X7S_Ideas_Field_Set__mdt</referenceTo>
    <relationshipLabel>7S Ideas Setting</relationshipLabel>
    <relationshipName>X7S_Ideas_Setting</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>